--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,4 @@ src\test.ipynb
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+Data/IITB_LCS.pem
