--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ src\test.ipynb
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 Data/IITB_LCS.pem
+Misc
+References
