removing other files; cleanup job

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ sleek-bootstrap/
 sleek-bootstrap/*
 *.csv
 src/data_collection/static/assets/img/elements/cc4a.jpg
+src\data_collection\test.ipynb
