--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,4 @@ sleek-bootstrap/*
 *.csv
 src/data_collection/static/assets/img/elements/cc4a.jpg
 src\data_collection\test.ipynb
+src\models\scratch.ipynb
