Added improvements to dashboard

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,7 @@ src\data_collection\test.ipynb
 src/models/scratch.ipynb
 Data/database.db
 src\data_collection\config.py
+src\commands.txt
+Data/database..db
+Data/database.db
+src/commands.txt
